--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -12,7 +12,7 @@
 
 <div class="row justify-content-center mb-3">
   <div class="col-md-9 text-center">
-    <h1 id="hometext" class="font-weight-bold">Omar Guzman is a Certified Quality Assurance Engineer with more than 7 years of experience.</h1>
+    <h1 id="hometext" class="font-weight-bold">Omar Guzman is a Certified Quality Assurance Engineer with more than 7 years of experience. \(-.-)/</h1>
   </div>
 </div>
 
